modify the index file

--- a/Quiz 1/quiz_1.css
+++ b/Quiz 1/quiz_1.css
@@ -21,7 +21,7 @@ body {
   .main-box {
     display: flex;
     justify-content: center;
-    background-color: #f19a4f;
+    background-color: #f4b781;
     margin: 50px auto ;
   }
   
